# lastfm-show-finder

./: .gitignore  main.py  pyproject.toml
src/: fetch.py  store.py
