[project]
name = "lastfm-show-finder"
version = "0.1.0"
description = "let's have some fun this beat is sick"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "duckdb>=1.5.4",
    "polars>=1.41.2",
    "python-dotenv>=1.2.2",
    "requests>=2.34.2",
    "ty>=0.0.50",
]

[dependency-groups]
dev = ["duckdb>=1.5.4", "polars[pyarrow]>=1.41.2", "sqlglot>=30.11.0"]
